feat:implement mould processor

--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="template.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
