feat:add test methods fix:revise removal prefix and suffix

--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DocxMould\DocxMould.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="template.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
